modified:   .vscode/settings.json 	new file:   global.c 	new file:   global.h 	modified:   main.c 	modified:   src/user_management/auth.c 	modified:   src/user_management/auth.h 	modified:   src/user_management/history.c 	modified:   src/user_management/history.h 	modified:   src/user_management/users.c 	modified:   src/user_management/users.h

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "*.embeddedhtml": "html",
-        "encrypt.h": "c"
+        "encrypt.h": "c",
+        "auth.h": "c",
+        "users.h": "c"
     }
 }
