modified:   main.c 	modified:   src/user_management/auth.c 	modified:   src/user_management/history.c 	modified:   src/user_management/users.c 	modified:   src/user_management/users.h

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "encrypt.h": "c",
         "auth.h": "c",
         "users.h": "c",
-        "sha.h": "c"
+        "sha.h": "c",
+        "mysql.h": "c"
     }
 }
