--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,9 @@
         "auth.h": "c",
         "users.h": "c",
         "sha.h": "c",
-        "mysql.h": "c"
+        "mysql.h": "c",
+        "global.h": "c",
+        "stdlib.h": "c",
+        "stdio.h": "c"
     }
 }
